5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1585_1446.log
== TEST (2019-03-21 21:15:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))

-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:23:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa * 2/3
paraacaridade = valor
print(round valor , 3 )
print("Quantos litros Michael Ficou? ")
-- ERROR:
File "XXXX", line 7
    print(round valor , 3 )
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:23:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa * 2/3
paraacaridade = valor
print(round valor , 3 )
print("Quantos litros Michael Ficou? ")
-- ERROR:
File "XXXX", line 7
    print(round valor , 3 )
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:24:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa * 2/3
print(round valor , 3 )
print("Quantos litros Michael Ficou? ")
-- ERROR:
File "XXXX", line 6
    print(round valor , 3 )
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:24:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
x = litrosdepolpa * 2/3
print(round x , 3 )
print("Quantos litros Michael Ficou? ")
-- ERROR:
File "XXXX", line 6
    print(round x , 3 )
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:24:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa * 2/3
print(round(valor, 3) )
print("Quantos litros Michael Ficou? ")
-- OUTPUT:
4.667
Quantos litros Michael Ficou?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:27:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa * 2/3
print(round(valor, 3) )
print("Quantos litros Michael Ficou? ")
michael = valor%3
print(round(michael, 3))
-- OUTPUT:
4.667
Quantos litros Michael Ficou? 
1.667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 21:27:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa * 2/3
print(round(valor, 3) )
print("Quantos litros Michael Ficou? ")
michael = valor%3
print(round(michael, 3))
-- EXECUTION TIME:
0.139572
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
4.667
Quantos litros Michael Ficou? 
1.667
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
13.333
Quantos litros Michael Ficou? 
1.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
10.0
Quantos litros Michael Ficou? 
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:28:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa * 2/3
print(round(valor, 3) )
aquietals = float(input("Quantos litros Michael Ficou? ")
michael = valor%3
print(round(michael, 3))
-- ERROR:
File "XXXX", line 8
    michael = valor%3
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:28:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa * 2/3
print(round(valor, 3) )
aquietals = float(input("Quantos litros Michael Ficou? ")
print(round(michael, 3))
-- ERROR:
File "XXXX", line 8
    print(round(michael, 3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:29:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa * 2/3
print(round(valor, 3) )
x = valor%3						
print(round(x, 3))
-- OUTPUT:
4.667
1.667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 21:30:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa * 2/3
print(round(valor, 3) )
x = valor%3						
print(round(x, 3))
-- EXECUTION TIME:
0.161639
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
4.667
1.667
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
13.333
1.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
10.0
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:30:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa * 2/3
print(round(valor, 3) )
x = valor%3						
print(round(x, 3))
-- OUTPUT:
4.667
1.667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:30:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa * 2/3
print(round(valor, 3) )
x = valor/3				
print(round(x, 3))
-- OUTPUT:
4.667
1.556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 21:31:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa * 2/3
print(round(valor, 3) )
x = valor/3				
print(round(x, 3))
-- EXECUTION TIME:
0.121487
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
4.667
1.556
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
13.333
4.444
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
10.0
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:32:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa * 2/3
print(round(valor, 3) )
x = litrosdepolpa/3
float(input("Qual a parte de Michael? "))
print(round(x, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 21:32:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa * 2/3
print(round(valor, 3) )
x = litrosdepolpa/3
float(input("Qual a parte de Michael? "))
print(round(x, 3))
-- EXECUTION TIME:
0.224199
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1446/main.py", line 8, in <module>
    float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:33:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa * 2/3
print(round(valor, 3) )
x = litrosdepolpa/3
print(round(x, 3))
float(input("Qual a parte de Michael? "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 21:33:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa * 2/3
print(round(valor, 3) )
x = litrosdepolpa/3
print(round(x, 3))
float(input("Qual a parte de Michael? "))
-- EXECUTION TIME:
0.218628
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1446/main.py", line 9, in <module>
    float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:33:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa * 2/3
print(round(valor, 3) )
x = litrosdepolpa/3
print(round(x, 3))
-- OUTPUT:
4.667
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 21:33:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa * 2/3
print(round(valor, 3) )
x = litrosdepolpa/3
print(round(x, 3))
-- EXECUTION TIME:
0.181845
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
4.667
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
13.333
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
10.0
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:34:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa/3
print(round(valor, 3) )
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 21:34:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa/3
print(round(valor, 3) )
-- EXECUTION TIME:
0.145196
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:26:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litrosdepolpa = float(input("Quantos litros Michael comprou? "))
valor = litrosdepolpa/3
print(round(valor, 3) )
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
